--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
+@import url("../css/awesome.css");
+@import url("../css/title.css");
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .container {
