--- a/css/awesome.css
+++ b/css/awesome.css
@@ -1,13 +1,20 @@
+.awesome {
+    padding: 100px 0 89px 0;
+
+}
+
 .awesome__wrapper {
     display: flex;
-    justify-content: space-between;
-    margin-top: 67px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin: 67px -15px 0;
 }
 
 .awesomr__block {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 15px;
     width: 350px;
 }
 
