--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("../css/awesome.css");
+@import url("../css/pricing.css");
 @import url("../css/title.css");
 
 * {
@@ -6,6 +7,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
+    list-style-type: none;
 }
 
 .container {
