--- a/css/pricing.css
+++ b/css/pricing.css
@@ -10,6 +10,10 @@
     margin: 63px -15px 0;
 }
 
+.pricing__card:hover {
+    margin: -16px 0 0 0;
+}
+
 .pricing__list {
     width: 340px;
     margin: 0 15px;
@@ -27,8 +31,9 @@
 }
 
 .pricing__item:active {
-    font-weight: 800;
+    font-weight: 700;
     background: #D98943;
+    color: #ffffff;
 }
 
 .pricing__item:last-child {
@@ -44,6 +49,11 @@
     background: #333333;
 }
 
+.pricing__item-name:active {
+    font-weight: 800;
+    background: #D98943;
+}
+
 .pricing__item-price {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -54,6 +64,11 @@
     background: #333333;
 }
 
+.pricing__item-price:active {
+    font-weight: 800;
+    background: #D98943;
+}
+
 .pricing__item-period {
     font-weight: 600;
     font-size: 14px;
@@ -61,6 +76,11 @@
     padding: 17px 0 14px 0;
     color: rgba(255, 255, 255, 0.5);
     background: #333333;
+}
+
+.pricing__item-period:active {
+    font-weight: 800;
+    background: #D98943;
 }
 
 .pricing__item-period_orange {
