--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("../css/awesome.css");
 @import url("../css/pricing.css");
 @import url("../css/title.css");
+@import url("../css/customers.css");
 
 * {
     box-sizing: border-box;
