--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url("../css/pricing.css");
 @import url("../css/title.css");
 @import url("../css/customers.css");
+@import url("../css/axure.css");
 
 * {
     box-sizing: border-box;
@@ -9,6 +10,7 @@
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     list-style-type: none;
+    text-decoration: none;
 }
 
 .container {
