--- a/css/title.css
+++ b/css/title.css
@@ -26,3 +26,33 @@
     text-align: center;
     color: #86878B;
 }
+
+.title_white {
+    position: relative;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    z-index: 3;
+}
+
+.title_white::after {
+    content: '';
+    display: block;
+    height: 1px;
+    width: 64px;
+    margin: 25px auto 0;
+    background: #FFFFFF;
+}
+
+.decription_white {
+    position: relative;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 19px;
+    color: rgba(255, 255, 255, 0.8);
+    z-index: 3;
+}
