--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
-@import url("../css/awesome.css");
-@import url("../css/pricing.css");
-@import url("../css/title.css");
-@import url("../css/customers.css");
-@import url("../css/axure.css");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@300;400;700&display=swap');
+@import url('../css/awesome.css');
+@import url('../css/pricing.css');
+@import url('../css/title.css');
+@import url('../css/customers.css');
+@import url('../css/axure.css');
+@import url('/css/header.css');
 
 * {
     box-sizing: border-box;
