Added animations to the section header

--- a/css/header.css
+++ b/css/header.css
@@ -40,9 +40,27 @@
 }
 
 .header__link {
+    position: relative;
     font-weight: 400;
     font-size: 15px;
     line-height: 20px;
     text-transform: capitalize;
     color: rgba(255, 255, 255, 0.7);
+
+}
+
+.header__link::after {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    content: '';
+    height: 1px;
+    width: 0;
+    border-bottom: solid 1px rgba(255, 255, 255, 0.7);
+    transition: all 0.1s ease-in-out;
+    opacity: 1;
+}
+
+.header__link:hover:after {
+    width: 100%;
 }
