--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url('../css/axure.css');
 @import url('../css/header.css');
 @import url('../css/social.css');
+@import url('../css/footer.css');
 
 * {
     box-sizing: border-box;
