--- a/css/awesome.css
+++ b/css/awesome.css
@@ -24,6 +24,11 @@
     height: 70px;
     border: 1px solid #D98943;
     border-radius: 50%;
+    transition: 0.5s ease;
+}
+
+.awesome__img:hover {
+    transform: rotate(360deg);
 }
 
 .awesome__title {
