--- a/css/social.css
+++ b/css/social.css
@@ -1,4 +1,5 @@
 .social {
+    padding: 14px 0 17px 0;
     background: #F8EFEF;
 }
 
@@ -7,13 +8,19 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 14px 0 17px 0;
+    margin: 0 -15px;
+
 }
 
 .social__media {
     display: flex;
     flex-direction: column;
     width: 365px;
+    margin: 0 15px;
+}
+
+.social__icons {
+    margin: 0 15px;
 }
 
 .social__title {
