--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import url('../css/header.css');
 @import url('../css/social.css');
 @import url('../css/footer.css');
+@import url('../css/links.css');
 
 * {
     box-sizing: border-box;
