--- a/css/title.css
+++ b/css/title.css
@@ -14,7 +14,7 @@
     height: 1px;
     width: 64px;
     margin: 25px auto 0;
-    background: #D98943;
+    background: #EC7979;
 }
 
 .decription {
