--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,6 @@
 .header {
-    position: fixed;
+    position: sticky;
+    top: 0;
     padding: 20px 0;
     width: 100%;
     background: #000000;
