--- a/css/links.css
+++ b/css/links.css
@@ -1,5 +1,6 @@
 .download {
     position: relative;
+    padding: 11px 0;
     width: 135px;
     border: 1px solid #FFFFFF;
     cursor: pointer;
@@ -8,6 +9,7 @@
 .download:active {
     border: 1px solid #EC7979;
     background: #EC7979;
+
 }
 
 .link {
