--- a/css/pricing.css
+++ b/css/pricing.css
@@ -12,16 +12,18 @@
 
 .pricing__card {
     transition: all 0.2s;
+    margin: 0 15px;
 }
+
 
 .pricing__card:hover {
     transform: translateY(-16px);
-
+    box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+    border-radius: 8px;
 }
 
 .pricing__list {
     width: 340px;
-    margin: 0 15px;
 }
 
 .pricing__item {
