--- a/css/awesome.css
+++ b/css/awesome.css
@@ -1,29 +1,29 @@
 .awesome {
-    padding: 100px 0 89px 0;
+    padding: 6.25rem 0 5.563rem 0;
 }
 
 .awesome__wrapper {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 67px -15px 0;
+    margin: 4.188rem -0.938rem 0;
 }
 
 .awesomr__block {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 15px;
-    width: 350px;
+    margin: 0 0.938rem;
+    width: 21.875rem;
 }
 
 .awesome__img {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70px;
-    height: 70px;
-    border: 1px solid #EC7979;
+    width: 4.375rem;
+    height: 4.375rem;
+    border: 0.063rem solid #EC7979;
     border-radius: 50%;
     transition: 0.5s ease;
 }
@@ -33,23 +33,23 @@
 }
 
 .awesome__img-svg {
-    font-size: 30px;
+    font-size: 1.875rem;
     color: #EC7979;
 }
 
 .awesome__title {
-    margin-top: 30px;
+    margin-top: 1.875rem;
     font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
+    font-size: 1.25rem;
+    line-height: 1.688rem;
     color: #333333;
 }
 
 .awesome__descr {
-    margin-top: 16px;
+    margin-top: 1rem;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 0.875rem;
+    line-height: 1.188rem;
     text-align: center;
     color: #000000;
 }
