--- a/css/axure.css
+++ b/css/axure.css
@@ -1,6 +1,6 @@
 .axure {
     position: relative;
-    padding: 57px 0 38px 0;
+    padding: 3.563rem 0 2.375rem 0;
     background-image: url('../img/axure/background.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -24,5 +24,5 @@
 }
 
 .axure__download {
-    margin: 68px auto 0;
+    margin: 4.25rem auto 0;
 }
