--- a/css/customers.css
+++ b/css/customers.css
@@ -1,31 +1,29 @@
 .customers {
-    padding: 80px 0 120px 0;
+    padding: 5rem 0 7.5rem 0;
 }
 
 .customers__wrapper {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    margin: 67px -15px 0;
+    margin: 4.188rem -0.938rem 0;
 }
 
 .customers__block {
     display: flex;
     flex-direction: column;
-    width: 298px;
-    margin: 0 15px;
+    width: 18.625rem;
+    margin: 0 0.938rem;
 }
 
 .customers__feedback {
     position: relative;
-    padding: 9px 22px 6px;
+    padding: 0.563rem 1.375rem 0.375rem;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
-    display: flex;
-    align-items: center;
+    font-size: 0.875rem;
+    line-height: 1.188rem;
     text-align: center;
-    border-radius: 7px;
+    border-radius: 0.438rem;
     background: #E2E2E2;
     color: #86878B;
     transition: 0.5s ease;
@@ -35,16 +33,16 @@
     content: '';
     position: absolute;
     top: 100%;
-    left: 39px;
+    left: 2.438rem;
     width: 0;
     height: 0;
-    border-left: 17px solid transparent;
-    border-right: 17px solid transparent;
-    border-top: 17px solid #E2E2E2;
+    border-left: 1.063rem solid transparent;
+    border-right: 1.063rem solid transparent;
+    border-top: 1.063rem solid #E2E2E2;
 }
 
 .customers__feedback:hover {
-    transform: translate(-10px, -10px);
+    transform: translate(-0.625rem, -0.625rem);
 }
 
 .customers__item {
@@ -55,19 +53,30 @@
 .customers__subitem {
     display: flex;
     justify-content: space-between;
-    margin-top: 22px;
-    width: 212px;
+    margin-top: 1.375rem;
+    width: 13.25rem;
+}
+
+.customers__photo {
+    width: 4.375rem;
+    height: 4.375rem;
+    border-radius: 50%;
+    overflow: hidden;
+    transition: 0.5s ease;
+}
+
+.customers__photo:active {
+    transform: scale(2);
 }
 
 .customers__img {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
 .customers__description {
-    padding-top: 8px;
+    padding-top: 0.5rem;
     text-align: end;
 }
 
@@ -78,15 +87,15 @@
 
 .customers__name {
     font-weight: 700;
-    font-size: 20px;
-    line-height: 27px;
+    font-size: 1.25rem;
+    line-height: 1.688rem;
     color: #333333;
 }
 
 .customers__profession {
-    margin-top: 12px;
+    margin-top: 0.75rem;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 0.875rem;
+    line-height: 1.188rem;
     color: #86878B;
 }
