--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    padding: 30px 0 15px 0;
+    padding: 1.875rem 0 0.9375rem 0;
     background: #000000;
 }
 
@@ -11,7 +11,7 @@
 .footer__block {
     display: flex;
     flex-direction: column;
-    width: 317px;
+    width: 19.8125rem;
 }
 
 .footer__list {
@@ -21,15 +21,15 @@
 }
 
 .footer__link {
-    font-size: 23px;
+    font-size: 1.4375rem;
     color: rgba(255, 255, 255, 0.7);
 }
 
 .footer__descriptipon {
     font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 0.75rem;
+    line-height: 1rem;
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
-    margin-top: 18px;
+    margin-top: 1.125rem;
 }
