--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .header {
     position: sticky;
     top: 0;
-    padding: 20px 0;
+    padding: 1.25rem 0;
     width: 100%;
     background: #000000;
     z-index: 100;
@@ -11,17 +11,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 -15px;
+    margin: 0 -0.9375rem;
 }
 
 .header__title {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    font-size: 30px;
-    line-height: 35px;
+    font-size: 1.875rem;
+    line-height: 2.1875rem;
     text-transform: uppercase;
     color: #FFFFFF;
-    margin: 0 15px;
+    margin: 0 0.9375rem;
 }
 
 .header__title::after {
@@ -30,7 +30,7 @@
 }
 
 .header__navigation {
-    margin: 0 15px;
+    margin: 0 0.9375rem;
 }
 
 .header__list {
@@ -41,7 +41,7 @@
 }
 
 .header__item {
-    margin-right: 48px;
+    margin-right: 3rem;
 }
 
 .header__item:last-child {
@@ -51,8 +51,8 @@
 .header__link {
     position: relative;
     font-weight: 400;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: 0.9375rem;
+    line-height: 1.25rem;
     text-transform: capitalize;
     color: rgba(255, 255, 255, 0.7);
 
@@ -63,9 +63,9 @@
     top: 100%;
     left: 0;
     content: '';
-    height: 1px;
+    height: 0.063rem;
     width: 0;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.7);
+    border-bottom: solid 0.063rem rgba(255, 255, 255, 0.7);
     transition: all 0.1s ease-in-out;
     opacity: 1;
 }
