--- a/css/label.css
+++ b/css/label.css
@@ -1,7 +1,7 @@
 .label {
     display: block;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 0.875rem;
+    line-height: 1.1875rem;
     color: #BDBDBD;
 }
