--- a/css/links.css
+++ b/css/links.css
@@ -1,13 +1,19 @@
 .download {
     position: relative;
-    padding: 11px 0;
-    width: 135px;
-    border: 1px solid #FFFFFF;
+    padding: .6875rem 0;
+    width: 8.4375rem;
+    border: .0625rem solid #FFFFFF;
     cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.download:hover {
+    background: #e75252;
+    border: .0625rem solid #e75252;
 }
 
 .download:active {
-    border: 1px solid #EC7979;
+    border: .0625rem solid #EC7979;
     background: #EC7979;
 
 }
@@ -16,8 +22,8 @@
     display: block;
     margin: 0 auto;
     font-weight: 600;
-    font-size: 15px;
-    line-height: 20px;
+    font-size: .9375rem;
+    line-height: 1.25rem;
     text-align: center;
     color: #FFFFFF;
 }
