--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,11 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 15px;
 }
 
 .container {
-    max-width: 1170px;
-    padding: 0 15px;
+    max-width: 73.125rem;
+    padding: 0 0.9375rem;
     margin: 0 auto;
 }
