Added the section feautures

--- a/css/title.css
+++ b/css/title.css
@@ -18,7 +18,7 @@
 }
 
 .decription {
-    margin-top: 30px;
+    margin-top: 1.875rem;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     font-size: .875rem;
