--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 @import url('../css/label.css');
 @import url('../css/button.css');
 @import url('../css/contact.css');
+@import url('../css/feautures.css');
 
 * {
     box-sizing: border-box;
@@ -25,7 +26,6 @@
 
 html {
     scroll-behavior: smooth;
-    font-size: 15px;
 }
 
 .container {
