added the first version of the adaptive

--- a/css/awesome.css
+++ b/css/awesome.css
@@ -9,7 +9,7 @@
     margin: 4.188rem -0.938rem 0;
 }
 
-.awesomr__block {
+.awesome__block {
     display: flex;
     flex-direction: column;
     align-items: center;
