--- a/css/header.css
+++ b/css/header.css
@@ -55,7 +55,6 @@
     line-height: 1.25rem;
     text-transform: capitalize;
     color: rgba(255, 255, 255, 0.7);
-
 }
 
 .header__link::after {
@@ -72,4 +71,8 @@
 
 .header__link:hover::after {
     width: 100%;
+}
+
+.hamburger {
+    display: none;
 }
