--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('../css/base.css');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@300;400;700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 @import url('../css/awesome.css');
@@ -14,6 +15,8 @@
 @import url('../css/button.css');
 @import url('../css/contact.css');
 @import url('../css/feautures.css');
+@import url('../css/media.css');
+
 
 * {
     box-sizing: border-box;
@@ -22,14 +25,4 @@
     font-family: 'Open Sans', sans-serif;
     list-style-type: none;
     text-decoration: none;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-.container {
-    max-width: 73.125rem;
-    padding: 0 0.9375rem;
-    margin: 0 auto;
 }
