--- a/css/header.css
+++ b/css/header.css
@@ -33,11 +33,28 @@
     margin: 0 0.9375rem;
 }
 
+
+
 .header__list {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
+}
+
+.header__list-active {
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: -100%;
+    width: 50%;
+    height: 100vh;
+    padding: 20px 15px;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    transition: 0.6s all;
 }
 
 .header__item {
