--- a/css/media.css
+++ b/css/media.css
@@ -267,8 +267,31 @@
         font-size: 1rem;
     }
 
-    .header__navigation {
-        display: none;
+    .header__list {
+        position: fixed;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100vh;
+        padding: 20px 15px;
+        background-color: rgba(0, 0, 0, 0.9);
+        z-index: 10;
+        transition: 0.6s all;
+    }
+
+    .header__list-active {
+        left: 0;
+    }
+
+    .header__item {
+        margin: 20px 0;
+    }
+
+    .header__link {
+        font-size: 20px;
     }
 
     .hamburger {
@@ -279,7 +302,7 @@
         transform: translateY(-50%);
         width: 26px;
         height: 12px;
-        z-index: 10;
+        z-index: 11;
     }
 
     .hamburger span {
@@ -304,7 +327,7 @@
     }
 
     .hamburger_active span:nth-child(3) {
-        transform: translateY(3px) rotate(5deg);
+        transform: translateY(3px) rotate(45deg);
     }
 
 
