Added script for tabs

--- a/css/media.css
+++ b/css/media.css
@@ -82,7 +82,7 @@
         justify-content: center;
     }
 
-    .feautures__content {
+    .feautures__content.active {
         justify-content: center;
     }
 
