--- a/css/feautures.css
+++ b/css/feautures.css
@@ -15,29 +15,37 @@
 
 .feautures__tab {
     width: 11.5rem;
-    font-weight: normal;
     font-size: 14px;
     line-height: 35px;
     text-transform: uppercase;
     border-radius: 5px 5px 0px 0px;
     cursor: pointer;
+    transition: 0.3s ease;
 }
 
 .feautures__tab.active {
+    font-weight: 700;
     color: #333333;
     border-top: 1px solid #C6CBCD;
     border-left: 1px solid #C6CBCD;
     border-right: 1px solid #C6CBCD;
-    border-bottom: 1px solid #fff;
+    background-color: #fff;
 }
 
 
 .feautures__content {
+    display: none;
+}
+
+.feautures__content.active {
     margin: -0.0625rem .9375rem 0;
     display: flex;
     border: .0625rem solid #C6CBCD;
     justify-content: space-between;
+    background-color: #fff;
+
 }
+
 
 .feautures__description {
     padding: 3.375rem 0 3.375rem 6.25rem;
@@ -46,6 +54,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    transition: 0.3s ease;
 }
 
 .feautures__title {
@@ -77,7 +86,7 @@
 }
 
 .feautures__button {
-    margin: 1.6875rem 0 0;
+    margin: 5rem 0 0;
 }
 
 .feautures__img {
