--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.overflow {
+    overflow: hidden;
+}
+
 .container {
     max-width: 73.125rem;
     padding: 0 0.9375rem;
